[project]
name = "python-aoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aoc-utils",
    "networkx>=3.4.2",
    "numpy>=2.1.3",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
aoc-utils = { path = "aoc_utils", editable = true }

[tool.ruff.format]
# Use single quotes in `ruff format`.
quote-style = "preserve"
